# aavm

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md
.github/workflows/: linux.yml  macos.yml  mingw.yml  windows.yml
cmake/: CompilerFlags.cmake  DetectLibCXX.cmake
src/: CMakeLists.txt  array.h  character.h  compiler.h  condition.h  helpers.h  instruction.cpp  instruction.h  instruction_encoder.cpp  instruction_encoder.h  instructions.h  keyword.h  keyword_map.h  label.h  lexer.cpp  lexer.h  operand2.h  parser.cpp  parser.h  register.h  stl_array.h  testlexer.cpp  testparser.cpp  testtextbuffer.c  testtextbuffer.cpp  textbuffer.c  textbuffer.h  token.h
test/: CMakeLists.txt  testparser.cpp  testtextbuffer.cpp
