include(CompilerFlags)
add_library(aavm-parser lexer.cpp parser.cpp)
target_include_directories(aavm-parser PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(aavm-parser PUBLIC fmt)
target_clang_compiler_flags(aavm-parser PRIVATE -Wall -Wextra -Werror -Wpedantic)
target_gcc_compiler_flags(aavm-parser PRIVATE -Wall -Wextra -Werror -Wpedantic)
target_msvc_compiler_flags(aavm-parser PRIVATE /W3 /WX)
